# intent_classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  clickhouse_check.py  compose.yaml  images.json  main.py  pyproject.toml  results.csv  topics.csv  worker.py
intent_classifier.egg-info/: PKG-INFO
